--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RobertAndroidCourse2021</string>
+  <string name="app_name">RobertAndroidCourse</string>
+  <string name="description_format">%1$s\n\n%2$s</string>
+  <string name="contactdetailsfragment">ContactDetailsFragment</string>
+  <string name="contactlistfragment">ContactListFragment</string>
 </resources>
